[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Dialog Settings/Scripts/ChooseQuest.gd" type="Script" id=1]

[node name="ChooseQuest" type="Button" groups=["quest_access"]]
offset_right = 94.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 140, 20 )
text = "Select Quest"
clip_text = true
script = ExtResource( 1 )
quest_finder_path = NodePath("CategoryFinder/QuestFinder")
category_finder_path = NodePath("CategoryFinder")

[node name="CategoryFinder" type="PopupMenu" parent="."]
offset_left = 2.0
offset_right = 192.0
offset_bottom = 230.0
custom_minimum_size = Vector2( 190, 230 )
size_flags_horizontal = 0
size_flags_vertical = 0
items = [ "Lost and Found", null, 0, false, false, 0, 0, null, "", false, "A Rebel Without A Cause", null, 0, false, false, 1, 0, null, "", false ]
allow_search = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="QuestFinder" type="PopupMenu" parent="CategoryFinder"]
offset_right = 187.0
offset_bottom = 229.0

[connection signal="pressed" from="." to="." method="_on_ChooseQuest_pressed"]
[connection signal="index_pressed" from="CategoryFinder" to="." method="_on_CategoryFinder_index_pressed"]
[connection signal="id_pressed" from="CategoryFinder/QuestFinder" to="." method="_on_QuestFinder_id_pressed"]
